syntax = "proto3";

import "google/protobuf/empty.proto";
package localdns.dns;

option go_package = "./;pb";

message Record {
  string type = 1;
  string domain = 3;
  string ip = 4;
  int32 ttl = 5;
}

message RecordList {
  repeated Record records = 1;
  int32 page = 2;
  int32 total = 3;
}

message RecordsFilter {
  int32 page = 1;
  int32 offset = 2;
  string query = 3;
}

service DnsService {
  rpc PutRecord (Record) returns (Record);
  rpc GetRecord (Record) returns (Record);
  rpc DeleteRecord (Record) returns (google.protobuf.Empty);
  rpc ListRecords (RecordsFilter) returns (RecordList);
}
